--- a/Order_Tracker_Page.html
+++ b/Order_Tracker_Page.html
@@ -383,7 +383,7 @@
                 <hr>
                 <strong>Subtotal: </strong> ₱${subTotal.toFixed(2)}<br>
                 <strong>+ </strong><br>
-                <strong>Delivery Fee: </strong> ₱${order.delivery_fee}<br>
+                <strong>Delivery Fee: </strong> ₱${order.deliveryFee}<br>
             </div>
         </span>
     </td>
